@@ -1,3 +1,5 @@
+*** Update trove descriptions and other sf.net text to include hashdeep
+
 *** Edit md5deep web page
     - Describe hashdeep in the introduction
 
